# conan-cmake-relocatable-package

./: CMakeLists.txt  Config.cmake.in  conanfile.py
include/: cmake-rel-pkg.h
src/: cmake-rel-pkg.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
